# open_vins

./: ReadMe.md  run_copyright.sh
config/simulation_2/: estimator_config.yaml  kalibr_imucam_chain.yaml
config/simulation_iris/: estimator_config.yaml  kalibr_imu_chain.yaml  kalibr_imucam_chain.yaml
config/stereo_cam_modified/: estimator_config.yaml  kalibr_imucam_chain.yaml
ov_core/src/: dummy.cpp  test_tracking.cpp  test_webcam.cpp
ov_core/src/cam/: CamBase.h  CamEqui.h  CamRadtan.h
ov_core/src/cpi/: CpiBase.h  CpiV1.h  CpiV2.h
ov_core/src/feat/: Feature.cpp  Feature.h  FeatureDatabase.h  FeatureHelper.h  FeatureInitializer.cpp  FeatureInitializer.h  FeatureInitializerOptions.h
ov_core/src/plot/: matplotlibcpp.h
ov_core/src/sim/: BsplineSE3.cpp  BsplineSE3.h
ov_core/src/track/: Grider_FAST.h  TrackAruco.cpp  TrackAruco.h  TrackBase.cpp  TrackBase.h  TrackDescriptor.cpp  TrackDescriptor.h  TrackKLT.cpp  TrackKLT.h  TrackSIM.cpp  TrackSIM.h
ov_init/src/: dummy.cpp  test_dynamic_init.cpp  test_dynamic_mle.cpp  test_simulation.cpp
ov_msckf/: CMakeLists.txt  package.xml
ov_msckf/cmake/: ROS2.cmake
ov_msckf/launch/: display_ros2.rviz  subscribe_simulation.launch.py
ov_msckf/src/: dummy.cpp  run_subscribe_msckf.cpp
ov_msckf/src/core/: VioManager.cpp  VioManager.h  VioManagerOptions.h
ov_msckf/src/ros/: ROS2Visualizer.cpp  ROS2Visualizer.h  RosVisualizerHelper.h
ov_msckf/src/sim/: Simulator.cpp  Simulator.h
ov_msckf/src/state/: Propagator.cpp  Propagator.h  State.cpp  State.h  StateHelper.cpp  StateHelper.h  StateOptions.h
ov_msckf/src/update/: UpdaterHelper.cpp  UpdaterHelper.h  UpdaterMSCKF.cpp  UpdaterMSCKF.h  UpdaterOptions.h  UpdaterSLAM.cpp  UpdaterSLAM.h  UpdaterZeroVelocity.cpp  UpdaterZeroVelocity.h
(+30 files in other folders)
